--- a/_posts/2018-05-13-innocamp区域赛.md
+++ b/_posts/2018-05-13-innocamp区域赛.md
@@ -17,9 +17,9 @@ tags: innocamp
 在这两天里面，真的是好吃好喝，水果不断，舒服。
 发给我了一件信仰的衣服后面在上图片。  
 最后一个谷歌中国的经理给我们讲了一些关于goolg 2018 i/o 的有趣的东西的，突然又想起那天晚上熬夜看google的事情了，哈哈哈
-![tshirt.jpg]({{ site.url }}/static/img/_poststshirt.jpg)
-![watercup.jpg]({{ site.url }}/static/img/_postswatercup.jpg)
-![idcard.jpg]({{ site.url }}/static/img/_postsidcard.jpg)
-![google.png]({{ site.url }}/static/img/_postsgoogle.png)
+![tshirt.jpg]({{ site.baseurl }}/static/img/_posts/tshirt.jpg)
+![watercup.jpg]({{ site.baseurl }}/static/img/_posts/watercup.jpg)
+![idcard.jpg]({{ site.baseurl }}/static/img/_posts/idcard.jpg)
+![google.png]({{ site.baseurl }}/static/img/_posts/google.png)
 
 
