--- a/_posts/2018-05-01-pat_小字辈.md
+++ b/_posts/2018-05-01-pat_小字辈.md
@@ -86,12 +86,12 @@ int main()
     return 0;
 }
 {% endhighlight %}
-![error_result_L2_026.png]({{ site.url }}/static/img/_posts/error_result_L2_026.png)
+![error_result_L2_026.png]({{ site.baseurl }}/static/img/error_result_L2_026.png)
 待续 等待代码优化
 -
 更新
 --------
-```
+{% highlight c++ %}
 #include<bits/stdc++.h>
 
 using namespace std;
@@ -143,4 +143,4 @@ int main()
     printf("\n");
     return 0;
 }
-```
+{% endhighlight %}
