--- a/_posts/2018-08-21-优先队列.md
+++ b/_posts/2018-08-21-优先队列.md
@@ -16,7 +16,7 @@ struct node
 {
     int s,b;
     node(int s,int b):s(s),b(b) { }
-    bool operator < (const node& rhs) const {//按照优先级b从大到小排，operator为重载运算符
+    bool operator < (const node& rhs) const {//按照优先级b从小到大排，operator为重载运算符
         return b > rhs.b;
     }
 };
