--- a/_posts/2018-05-01-pat_小字辈.md
+++ b/_posts/2018-05-01-pat_小字辈.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: pat小字辈试题
+title: 小字辈
 date: 2018-05-01 21:00 +0800
 categories: algorithm
 tags: pat
@@ -88,7 +88,7 @@ int main()
 {% endhighlight %}
 ![error_result_L2_026.png]({{ site.baseurl }}/static/img/error_result_L2_026.png)
 待续 等待代码优化
--
+-  
 更新
 --------
 {% highlight c++ %}
@@ -141,6 +141,51 @@ int main()
         printf("%d",tem[len-1][i]);
     }
     printf("\n");
+    return 0;
+}
+{% endhighlight %}
+
+
+
+
+
+改进
+
+{% highlight c++ %}
+#include <bits/stdc++.h>
+
+using namespace std;
+int v[100005];
+int p[100005];
+int main()
+{
+    int n;
+    scanf("%d",&n);
+    for(int i=1;i<=n;i++){
+        int a;scanf("%d",&a);
+        v[i]=a;
+    }
+    int mmax=-1;
+    for(int i=1;i<=n;i++){
+        int len=0,j=i;
+        while(j)
+        {
+            len++;
+            j=v[j];
+            //cout << "len: "<<len <<" j: "<<j<<" i "<<i<<endl;
+        }
+        p[i]=len;
+        if(len>mmax) mmax=len;
+    }
+    printf("%d\n",mmax-1);
+    int k=0;
+    for(int i=1;i<=n;i++){
+        if(p[i]==mmax){
+            if(k) printf(" ");
+            printf("%d",i);
+            k++;
+        }
+    }
     return 0;
 }
 {% endhighlight %}
