--- a/_posts/2018-05-25-dijkstra算法.md
+++ b/_posts/2018-05-25-dijkstra算法.md
@@ -8,4 +8,26 @@ tags: dijkstra
 学习dijkstra
 <!--more-->
 最短路径求解  
-
+{% highlight c++ linenos %}
+int dijkstra(int n)
+{
+    //初始化v[0]到v[i]的距离
+    for(int i=1;i<=n;i++)
+        dis[i] = w[0][i];
+    vis[0]=1;//标记v[0]点
+    for(int i = 1; i <= n; i++)
+    {
+        //查找最近点
+        int min = INF,k = 0;
+        for(int j = 0; j <= n; j++)
+            if(!vis[w] && dis[j] < min)
+                min = dis[w],k = j;
+        vis[k] = 1;//标记查找到的最近点
+        //判断是直接v[0]连接v[j]短，还是经过v[k]连接v[j]更短
+        for(int j = 1; j <= n; j++)
+            if(!vis[j] && min+w[k][j] < dis[j])
+                d[j] = min+w[k][j];
+    }
+    return dis[j];
+}
+{% endhighlight %}
