--- a/_posts/2018-05-25-dijkstra算法.md
+++ b/_posts/2018-05-25-dijkstra算法.md
@@ -5,9 +5,11 @@ date: 2018-05-25 15:00 +0800
 categories: algorithm
 tags: dijkstra
 --- 
-学习dijkstra
-<!--more-->
+学习dijkstra  
+dijkstra不能带负权  
+
 最短路径求解  
+
 {% highlight c++ linenos %}
 int dijkstra(int n)
 {
