--- a/_posts/2018-09-02-线性回归.md
+++ b/_posts/2018-09-02-线性回归.md
@@ -7,7 +7,7 @@ tags: 线性回归
 ---
 
 线性回归通过学习一个模型尽可能的预测实值输出标记  
-f(Xi) = WXi + b 使得$ f(Xi) \approx Yi $.
+f(Xi) = WXi + b 使得 f(Xi) 约等于 Yi .
 在线性回归中，最小二乘法就是试图找到一条直线，使所有样本到直线上的欧式距离之和最小  
-求解w,b 使$ E(w,b)=\sum_{i=1}^{n}\sqrt((yi-wxi-b))$  
+求解w,b 使 E(w,b)=sum((yi-wxi-b)^2)  
 分别对w,b求偏导，分别令其等于0，可得到w和b最优解的闭式解
