--- a/_posts/2018-09-03-分类西瓜数据集.md
+++ b/_posts/2018-09-03-分类西瓜数据集.md
@@ -15,6 +15,14 @@ FN: 预测为负，实际为正
 真正例率(同召回率、查全率)：TPR = TP/ (TP+FN)  
 假正例率：FPR =FP/ (FP+TN)  
 F1-score: 2*TP/(2*TP + FP + FN)  
+
+
+Repeat { θj := θj − α 1/m∑(i=1:m)(hθ(x(i)) − y(i) ) xj(i)
+    (simultaneously update all θ j )
+}
+
+![function_h_theta]({{ site.baseurl }}/static/img/function_h_theta.png)
+
 ```python
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
