--- a/_posts/2018-09-03-分类西瓜数据集.md
+++ b/_posts/2018-09-03-分类西瓜数据集.md
@@ -21,7 +21,7 @@ Repeat { θj := θj − α 1/m∑(i=1:m)(hθ(x(i)) − y(i) ) xj(i)
     (simultaneously update all θ j )
 }
 
-![function_h_theta]({{ site.baseurl }}/static/img/function_h_theta.png)
+![function_h_theta.png]({{ site.baseurl }}/static/img/function_h_theta.png)
 
 ```python
 #!/usr/bin/env python3
