--- a/_posts/2018-09-03-分类西瓜数据集.md
+++ b/_posts/2018-09-03-分类西瓜数据集.md
@@ -21,8 +21,8 @@ Repeat { θj := θj − α 1/m∑(i=1:m)(hθ(x(i)) − y(i) ) xj(i)
     (simultaneously update all θ j )
 }
 
-![function_h_theta.png]({{ site.baseurl }}/static/img/function_h_theta.png)
-
+![function_h_theta.png]({{ site.url }}/assets/img/function_h_theta.png)
+![tshirt.jpg]({{ site.baseurl }}/static/img/tshirt.jpg)
 ```python
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
