--- a/_posts/2018-09-10-贝叶斯分类器.md
+++ b/_posts/2018-09-10-贝叶斯分类器.md
@@ -9,15 +9,15 @@ tags: 贝叶斯
 ![bayes.png]({{ site.baseurl }}/static/img/bayes.png)
 1. 计算每个类别中的文档数目  
 2. 对每篇训练文档：  
-3.    对每个类别：  
-4.      如果词条出现在文档中->增加该词条的计数值  
-5.      增加所有词条的计数值  
+3. -对每个类别：  
+4. --如果词条出现在文档中->增加该词条的计数值  
+5. --增加所有词条的计数值  
 6. 对每个类别：  
-7.   对每个词条：  
-8.     将该词条的数目除以总词条数目得到条件概率  
-9. 返回每个类别的条件概率
-```python
+7. -对每个词条：  
+8. --将该词条的数目除以总词条数目得到条件概率  
+9. 返回每个类别的条件概率  
 
+```python
 def trainNB0(trainMatrix,trainCategory):
     numTrainDocs = len(trainMatrix)
     numWords = len(trainMatrix[0])
