--- a/_posts/2018-09-10-贝叶斯分类器.md
+++ b/_posts/2018-09-10-贝叶斯分类器.md
@@ -18,6 +18,7 @@ tags: 贝叶斯
 9. 返回每个类别的条件概率  
 
 ```python
+# trainMatrix文档矩阵，trainCategory标签构成的向量
 def trainNB0(trainMatrix,trainCategory):
     numTrainDocs = len(trainMatrix)
     numWords = len(trainMatrix[0])
@@ -34,7 +35,8 @@ def trainNB0(trainMatrix,trainCategory):
         else:
             p0Num += trainMatrix[i]
             p0Denom += sum(trainMatrix[i])
+    # 太多小数相乘可能会造成下溢出，四舍五入得到0，这里取自然对数，避免这种情况
     p1vect = np.log(p1Num/p1Denom)
-    p0vect = np.log(p0Num/p0Denom) 
+    p0vect = np.log(p0Num/p0Denom)
     return p0vect,p1vect,pAbusive
 ```
